# Defragmentor-cu-interfata-grafica

./: .gitattributes  AllcoationTable.cpp  AllcoationTable.h  AllocationTable.cpp  AllocationTable.h  BaseFile.cpp  BaseFile.h  Block.cpp  Block.h  CMakeLists.txt  ChecksumStrategy.cpp  ChecksumStrategy.h  DiskSpaceMap.cpp  DiskSpaceMap.h  Exceptions.h  File.cpp  File.h  FileFactory.cpp  FileFactory.h  GUI.cpp  GUI.h  README.md  StatTracker.h  SystemFile.cpp  SystemFile.h  TempFile.cpp  TempFile.h  Test.cpp  Test.h  UserFile.cpp  UserFile.h  Utils.h  main.cpp
.github/actions/install-packages/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
Screenshots/: Filmare_Defrag.webm
scripts/: run_test.sh  run_valgrind.sh  valgrind-suppressions.supp
